@@ -26,5 +26,12 @@ nfs_get_event_loop() noexcept;
  */
 [[nodiscard]]
 NfsConnection &
+nfs_make_connection(const char *url);
+
+/**
+ * Throws on error.
+ */
+[[nodiscard]]
+NfsConnection &
 nfs_get_connection(std::string_view server,
 		   std::string_view export_name);
